# lab3

./: .gitignore  4  CMakeLists.txt  file.cpp  file.hpp  lab.cpp  smartp.hpp  smartptrs.hpp  smartptrs2.hpp  streams.cpp  streams.hpp  text.cpp  type_traits.hpp
